
 * Fix warnings from newer GLib versions (#5660)

 * Always set the `container` environment variable (#5610)

 * Always let the app inherit redirected file descriptors (#5626)

 * Don't use `WAYLAND_SOCKET` unless given `--socket=inherit-wayland-socket`
   (#5614)

 * Use `fusermount3` if compiled with FUSE 3, overridable with
   `-Dsystem_fusermount` compile-time option (#5104)

 * Improve async-signal safety (#5687)

 * Fix various memory leaks (#5683, #5690, #5691)

 * Detect the correct gtk-doc when cross-compiling (#5650)

 * Detect the correct wayland-scanner when cross-compiling (#5596)

 * Documentation improvements (#5659, #5677, #5682, #5664)

 * Skip more tests when FUSE isn't available (#5611)

 * Translation updates (#5602)

Changes in 1.15.6
~~~~~~~~~~~~~~~~~
Released: 2023-11-14

Dependencies:

 * In distributions that compile Flatpak to use a separate bubblewrap (bwrap)
   executable, version 0.8.0 is now required.

 * Enabling the optional Wayland security context feature requires
   libwayland-client, wayland-scanner >= 1.15 and wayland-protocols >= 1.32.

 * Ubuntu 18.04 is no longer routinely tested. Support for dependency
   versions included in Ubuntu 18.04 should be considered "at risk".

Features:

 * Add --device=input, for access to evdev devices in /dev/input (#5481)

 * Update bundled copy of bubblewrap to version 0.8.0, and rely on its
   features:
     * Improve error message if seccomp is disabled in kernel config
     * Security hardening: set user namespace limit to 0, to prevent creation
       of nested user namespaces in a more robust way (#5084)

 * For subsandboxes started by flatpak-portal, inherit environment
   variables from the `flatpak run` that started the original instance
   rather than from flatpak-portal, fixing behaviour of FLATPAK_GL_DRIVERS
   and similar features (#5278)

 * Stop http transfers if a download in progress becomes very slow (#5519)
