@@ -1,7 +1,7 @@
 # flatpak - main branch
 
-This repository contains frozen state of the repository.
+This repository contains the frozen state of the repository.
 Its history is cleared. It is used only for static code
 analysis with Codacy.
 
-Commit Time: 1710825725
+Commit Time: 1711525668
